--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,9 @@ body {
 .hamburger-active > span:nth-child(3) {
   @apply origin-bottom-left -rotate-45;
 }
+
+@layer base {
+  :root {
+    --radius: 0.5rem;
+  }
+}
